Fix location section alignment

--- a/styles.css
+++ b/styles.css
@@ -76,19 +76,30 @@ main {
 }
 
 #locations {
+    height: 500px;
+    width: 100%;
+    background: center no-repeat url("images/img-locations-background.jpg");
+}
+
+#locations-container {
     display: flex;
-    flex-wrap: wrap;
-    flex: 1 1200px;
     height: 500px;
     width: 100%;
     justify-content: center;
     align-items: center;
-    background: center no-repeat url("images/img-locations-background.jpg");
-}
+    gap: 20px;
+  }
 
-#locations div h2 {
-    margin: 50px 600px 0 600px;
-    align-self: center;
+#locations h2 {
+    margin: auto;
+    width: 300px;
+    padding: 10px;
+    position: relative;
+    top: 40px;
+    border: 1px none seashell;
+    border-radius: 10px;
+    box-shadow: 0px 3px 2px 1px seashell;
+    background-color:rgba(0, 0, 0, 0.7);
 }
 
 .locationBox {
